--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,9 @@
 
+.common_btn {
+
+    width: 100px;
+    height: 100px;
+}
 
 
 .common_btn:hover {
@@ -12,13 +17,13 @@
 .calc_table {
 
     border-collapse: collapse; 
+    width: 100%;
 
 }
 
 .calc_table td {
 
-    width: 50px;
-    height: 50px;
+
     background-color: #534d4d;
     padding:0;
     margin: 0;
@@ -28,10 +33,9 @@
 
 .calc_btn {
 
-    width: 50px;
-    height: 50px;
+
     background-color: #817f7d;
-    font-size: 1.2em;
+    font-size: 1.6em;
     border: none;
     color: rgb(255, 255, 255)
 }
@@ -39,15 +43,13 @@
 
 .calc_btn_zero {
 
-
-    width: 100%;
-    height: 50px;
     background-color: #817f7d;
     border: none;
     color: #fff;
     padding: 0;
-    font-size: 1.2em;
-   
+    font-size: 1.6em;
+    width: 100%;
+    height: 100px;
 
 }
 
@@ -55,11 +57,11 @@
 
     background-color: #534d4d;
     color: white;
-    height: 100%;
+    height: 100px;
     width: 100%;
     border: none;
     color: #fff;
-    font-size: 2em;
+    font-size: 3em;
     text-align: right;
     padding: 5px;
     font-weight: 0.5em
@@ -67,20 +69,51 @@
 
 .calc_op_btn {
 
-    width: 50px;
-    height: 50px;
+
     background-color: #FC9A1A;
-    font-size: 1em;
+    font-size: 2em;
     border: none;
     color: rgb(255, 255, 255)
 }
 
 .calc_op_btn2 {
 
-    width: 100%;
-    height: 100%;
+
     background-color: #696363;
-    font-size: 1em;
+    font-size: 1.6em;
     border: none;
     color: rgb(255, 255, 255)
+}
+
+
+
+.table_container {
+    width: 100%;
+    background-color: red;
+}
+
+.main_table_container {
+
+    background-color: blue;
+    padding: 10px;
+}
+
+.info {
+    text-align: center;
+    background-color: #fff;
+    color: black;
+    font-size: 0.8em;
+}
+
+
+/* desktop only css */
+@media only screen and (min-width: 768px) {
+
+
+    .calc_table {
+        width: 300px;
+        margin: 20px;
+        
+    }
+
 }
